--- a/drivers/block/hyperblock/Makefile
+++ b/drivers/block/hyperblock/Makefile
@@ -1,3 +1,6 @@
-obj-$(CONFIG_HYPERBLOCK) += 
+cflags-y += -I/usr/include/
+hyperblock-y := lsmt_ro_file.o
+obj-$(CONFIG_BLK_DEV_LOOP)	+= loop.o
+obj-$(CONFIG_HYPERBLOCK) 	+= 
 
 
