--- a/drivers/block/hyperblock/Makefile
+++ b/drivers/block/hyperblock/Makefile
@@ -1,6 +1,11 @@
 cflags-y += -I/usr/include/
-hyperblock-y := lsmt_ro_file.o
+#hyperblock-y := lsmt_ro_file.o
 obj-$(CONFIG_BLK_DEV_LOOP)	+= loop.o
+loop-objs := ./src/loop.o ./src/lsmt_ro_file.o
 obj-$(CONFIG_HYPERBLOCK) 	+= 
 
+all:
+	make -C $(KERNEL_PATH) M=$(PWD) modules
 
+clean:
+	make -C $(KERNEL_PATH) M=$(PWD) clean
