--- a/drivers/block/Makefile
+++ b/drivers/block/Makefile
@@ -26,7 +26,7 @@ obj-$(CONFIG_BLK_DEV_SKD)	+= skd.o
 
 obj-$(CONFIG_BLK_DEV_UMEM)	+= umem.o
 obj-$(CONFIG_BLK_DEV_NBD)	+= nbd.o
-obj-$(CONFIG_BLK_DEV_CRYPTOLOOP) += hyperblock/cryptoloop.o
+obj-$(CONFIG_BLK_DEV_CRYPTOLOOP) += hyperblock/src/cryptoloop.o
 obj-$(CONFIG_VIRTIO_BLK)	+= virtio_blk.o
 
 obj-$(CONFIG_BLK_DEV_SX8)	+= sx8.o
