fix: debugging lsmt_pread dead lock caused system hang

--- a/drivers/block/hyperblock/Makefile.bk
+++ b/drivers/block/hyperblock/Makefile.bk
@@ -1,8 +1,8 @@
-#cflags-y += -I/usr/include/
+cflags-y += -I/usr/include/
 #hyperblock-y := lsmt_ro_file.o
-#obj-$(CONFIG_BLK_DEV_LOOP) += loop.o
-obj-$(CONFIG_HYPERBLOCK) += loop.o 
-loop-objs := src/loop.o src/lsmt_ro_file.o
+obj-$(CONFIG_BLK_DEV_LOOP)	+= loop.o
+loop-objs := ./src/loop.o ./src/lsmt_ro_file.o
+obj-$(CONFIG_HYPERBLOCK) 	+= 
 KERNEL_PATH=/root/kernel/hyperblock_loop
 all:
 	make -C $(KERNEL_PATH) M=$(PWD) modules
