TODO: fix PG_lock access protection fault

--- a/drivers/block/hyperblock/Makefile
+++ b/drivers/block/hyperblock/Makefile
@@ -3,7 +3,8 @@
 #obj-$(CONFIG_BLK_DEV_LOOP) += loop.o
 obj-$(CONFIG_HYPERBLOCK) += loop.o 
 loop-objs := src/loop.o src/lsmt_ro_file.o
-KERNEL_PATH=/root/kernel/hyperblock_loop
+#KERNEL_PATH=/root/kernel/hyperblock_loop
+KERNEL_PATH=../../../
 all:
 	make -C $(KERNEL_PATH) M=$(PWD) modules
 
